# meshinsights-demo-pump

./: .gitignore  README.md  pyproject.toml
Docs/: Agents.md  ArchitectureMeshInsights.md  PumpAlgorithms.md  PumpSimulatorSpec.md  Streamlit.md
src/core/: data_normalizer.py  data_object.py  data_source.py  pipeline.py  processor.py
src/core/plugins/data_access/: DataAccessPlugins.md  data_access_plugin_core.py
src/core/plugins/data_access/implementations/: adx_plugin.py  local_file_plugin.py  local_mysql_plugin.py  rest_api_plugin.py
src/core/utils/: convert_data_for_ai.py
src/pump_data/: pump_labels.csv  pump_simulator.py  raw_data_app.py
src/pump_pipeline/: streamlit_app.py
src/pump_pipeline/factories/: pipeline_factory_pump.py
src/pump_pipeline/pipeline_objects/: data_object_pump.py
src/pump_pipeline/stage_cpu/processors/: ai_classification.py  calculate_differential_pressure.py  calculate_efficiency.py  calculate_head_spread_ratio.py  calculate_head_trend_slope.py  calculate_intermittent_event_rate.py
src/pump_pipeline/stage_io/: data_normalizer_pump.py  data_retriever_pump.py
